Deletou algumas palavras

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <header class="masthead">
             <div class="container">
                 <div class="masthead-subheading">Bem-Vindo ao nosso site</div>
-                <div class="masthead-heading text-uppercase">O seu patrimonio seguro todo o tempo</div>
+                <div class="masthead-heading text-uppercase">O seu patrimonio seguro</div>
                 <a class="btn btn-primary btn-xl text-uppercase" href="#services">Diga mais</a>
             </div>
         </header>
